# MATH5030-Group02

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: AI_USAGE.md
notebooks/: demo.ipynb
results/: parameter_robustness.csv  path_sensitivity.csv  timestep_sensitivity.csv
src/heston_mc/: Heston_simulation-2.ipynb  __init__.py  control_variate.py  experiments.py  heston_simulation-2.py  params.py  utils.py
tests/: test_control_variate.py  test_experiments.py  test_params.py  test_realized_variance.py  test_simulation.py  test_utils.py  test_variance_option.py  test_variance_swap.py
